2014-12-01  Benjamin Poulain  <benjamin@webkit.org>

        Add the dynamic specificity of the selector list argument when matching :nth-child() and :nth-last-child()
        https://bugs.webkit.org/show_bug.cgi?id=139001

        Reviewed by Andreas Kling.

        * fast/css/nth-child-specificity-1-expected.html: Added.
        * fast/css/nth-child-specificity-1.html: Added.
        * fast/css/nth-child-specificity-2-expected.html: Added.
        * fast/css/nth-child-specificity-2.html: Added.
        * fast/css/nth-child-specificity-3-expected.html: Added.
        * fast/css/nth-child-specificity-3.html: Added.
        * fast/css/nth-child-specificity-4-expected.html: Added.
        * fast/css/nth-child-specificity-4.html: Added.
        * fast/css/nth-last-child-specificity-1-expected.html: Added.
        * fast/css/nth-last-child-specificity-1.html: Added.
        * fast/css/nth-last-child-specificity-2-expected.html: Added.
        * fast/css/nth-last-child-specificity-2.html: Added.
        * fast/css/nth-last-child-specificity-3-expected.html: Added.
        * fast/css/nth-last-child-specificity-3.html: Added.
        * fast/css/nth-last-child-specificity-4-expected.html: Added.
        * fast/css/nth-last-child-specificity-4.html: Added.


2014-12-01  Zalan Bujtas  <zalan@apple.com>

        Twitter avatar moves when hovering/unhovering the "follow" button.
        https://bugs.webkit.org/show_bug.cgi?id=139147
        rdar://problem/19096508

        Reviewed by Simon Fraser.

        This patch ensures that the out of flow positioned render boxes (RenderReplaced) do not
        get repositioned when their inline box wrappers move.
        Ideally, out of flow positioned renderers do not have inline wrappers by the time we start
        placing inline boxes, but in certain case (optimized code path for descendantsHaveSameLineHeightAndBaseline()),
        they are still part of the inline box tree.