@@ -1,3 +1,15 @@
+2014-12-02  Andrzej Badowski  <a.badowski@samsung.com>
+
+        REGRESSION(r176122): [GTK] Layout Test platform/gtk/accessibility/table-hierarchy.html fails.
+        https://bugs.webkit.org/show_bug.cgi?id=139125
+
+        Reviewed by Chris Fleizach.
+
+        Update test and expectation to fix regression.
+
+        * platform/gtk/accessibility/table-hierarchy-expected.txt:
+        * platform/gtk/accessibility/table-hierarchy.html:
+
 2014-12-01  Benjamin Poulain  <benjamin@webkit.org>
 
         Add the dynamic specificity of the selector list argument when matching :nth-child() and :nth-last-child()
